--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   path: ^1.9.0
   file_picker: ^8.0.3
   permission_handler: ^11.3.1
+  intl: ^0.19.0
+  device_calendar: ^4.3.2
+  timezone: ^0.9.3
 
 dev_dependencies:
   flutter_test:
